[tool.poetry]
name = "logger_nginx"
version = "0.1.0"
description = "Log analyse script"
authors = ["Kastsiukevich Uladzimir <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
ruff = "^0.6.9"

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
