[tool.poetry]
name = "logger_nginx"
version = "0.1.0"
description = "Log analyse script"
authors = ["Kastsiukevich Uladzimir <grun_gespenst@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
pre-commit = "^3.8.0"
mypy = "^1.11.2"
ruff = "^0.6.9"
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ['docs', 'test']
disable_error_code = ['name-defined']
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
